@@ -1,7 +1,8 @@
 package uk.gov.moj.cpp.results.domain.aggregate.utils;
 
 import static java.util.Comparator.comparing;
-import static java.util.stream.Collectors.toList;
+import static java.util.Objects.nonNull;
+import static java.util.stream.Collectors.groupingBy;
 import static uk.gov.moj.cpp.results.domain.aggregate.NCESDecisionHelper.isApplicationDenied;
 
 import uk.gov.justice.hearing.courts.OffenceResultsDetails;
@@ -11,22 +12,42 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
+
+import org.apache.commons.collections.CollectionUtils;
 
 public class GobAccountHelper {
 
     public static List<String> getOldGobAccounts(final LinkedList<CorrelationItem> correlationItemList, final UUID accountCorrelationId, final List<UUID> offenceIdList,
                                                  final Map<UUID, List<OffenceResultsDetails>> applicationResultsDetails) {
-        return offenceIdList.stream()
-                .map(offenceId -> getOldGobAccount(correlationItemList, accountCorrelationId, offenceId, applicationResultsDetails))
+
+        correlationItemList.sort(comparing(CorrelationItem::getCreatedTime).reversed());
+        final Map<UUID, List<CorrelationItem>> hearingIdCorrelationItemsMap = offenceIdList.stream()
+                .map(offenceId -> getOldCorrelationItemMatch(correlationItemList, accountCorrelationId, offenceId, applicationResultsDetails))
                 .filter(Objects::nonNull)
                 .distinct()
-                .collect(toList());
+                .collect(groupingBy(CorrelationItem::getHearingId));
+
+        return hearingIdCorrelationItemsMap.values().stream()
+                .filter(CollectionUtils::isNotEmpty)
+                .map(GobAccountHelper::getRecentAccountNumber)
+                .distinct()
+                .toList();
+    }
+
+    private static String getRecentAccountNumber(final List<CorrelationItem> ciList) {
+        ciList.sort(comparing(CorrelationItem::getCreatedTime).reversed());
+        return ciList.get(0).getAccountNumber();
     }
 
     public static String getOldGobAccount(final LinkedList<CorrelationItem> correlationItemList, final UUID accountCorrelationId, final UUID offenceId,
                                           final Map<UUID, List<OffenceResultsDetails>> applicationResultsDetails) {
         correlationItemList.sort(comparing(CorrelationItem::getCreatedTime).reversed());
+        final CorrelationItem oldCorrelationItemMatch = getOldCorrelationItemMatch(correlationItemList, accountCorrelationId, offenceId, applicationResultsDetails);
+        return nonNull(oldCorrelationItemMatch) ? oldCorrelationItemMatch.getAccountNumber() : null;
+    }
+
+    private static CorrelationItem getOldCorrelationItemMatch(final LinkedList<CorrelationItem> correlationItemList, final UUID accountCorrelationId, final UUID offenceId,
+                                                              final Map<UUID, List<OffenceResultsDetails>> applicationResultsDetails) {
 
         //find previous matching correlationItem by offenceId; then ensure the offence isFinancial to return valid GobAccountNumber
         return correlationItemList.stream()
@@ -45,7 +66,7 @@ public class GobAccountHelper {
                             .filter(o -> o.getOffenceId().equals(offenceId))
                             .findFirst()
                             .filter(offenceResultsMatch -> Boolean.TRUE.equals(offenceResultsMatch.getIsFinancial())).isPresent()) {
-                        return correlationItem.getAccountNumber();
+                        return correlationItem;
                     }
                     return null;
                 }).orElse(null);
